# cadence

./: .gitignore  AGENTS.md  CLAUDE.md  NOTICE  PROVENANCE.md  README.md  pyproject.toml
examples/: clean_report.query.json  contracts.json  dashboard.query.json
src/cadence/: __init__.py  __main__.py  contract.py  lint.py  receipt.py
tests/: test_contract.py  test_lint.py  test_receipt.py
