[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadence"
version = "0.1.0"
description = "Temporal admissibility checker for data analytics"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "James Beck" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
